// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RoomCard renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderColor": "#f1f5f9",
      "borderRadius": 32,
      "borderWidth": 1,
      "marginBottom": 12,
      "padding": 24,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1c1c0d",
            "fontSize": 18,
            "fontWeight": "600",
            "marginBottom": 2,
          }
        }
      >
        Test Room
      </Text>
      <Text
        style={
          {
            "color": "#9293c9",
            "fontSize": 14,
            "marginTop": 2,
          }
        }
      >
        Kategori
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(100, 103, 242, 0.1)",
          "borderRadius": 9999,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Material Symbols Outlined",
              "fontSize": 20,
            },
            {
              "color": "#6467f2",
              "fontSize": 18,
            },
          ]
        }
      >
        timer
      </Text>
      <Text
        style={
          {
            "color": "#6467f2",
            "fontSize": 14,
            "fontVariant": "tabular-nums",
            "fontWeight": "bold",
          }
        }
      >
        03:20
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 4,
        }
      }
    >
      <View
        style={
          [
            {
              "borderColor": "#fff",
              "borderRadius": 9999,
              "borderWidth": 2,
              "overflow": "hidden",
            },
            {
              "height": 40,
              "marginLeft": 0,
              "width": 40,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderColor": "#fff",
                "overflow": "hidden",
              },
              {
                "borderRadius": 20,
                "borderWidth": 2,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#1E293B",
                  "justifyContent": "center",
                },
                {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#1c1c0d",
                    "fontWeight": "bold",
                  },
                  {
                    "fontSize": 16,
                  },
                ]
              }
            >
              U1
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "borderColor": "#fff",
              "borderRadius": 9999,
              "borderWidth": 2,
              "overflow": "hidden",
            },
            {
              "height": 40,
              "marginLeft": -12,
              "width": 40,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderColor": "#fff",
                "overflow": "hidden",
              },
              {
                "borderRadius": 20,
                "borderWidth": 2,
                "height": 40,
                "width": 40,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#1E293B",
                  "justifyContent": "center",
                },
                {
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#1c1c0d",
                    "fontWeight": "bold",
                  },
                  {
                    "fontSize": 16,
                  },
                ]
              }
            >
              U2
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "borderTopColor": "#f1f5f9",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Material Symbols Outlined",
              "fontSize": 20,
            },
            {
              "color": "#9e9d47",
              "fontSize": 20,
            },
          ]
        }
      >
        group
      </Text>
      <Text
        style={
          {
            "color": "#9e9d47",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        2
        /
        8
      </Text>
    </View>
    <View
      style={
        [
          {
            "gap": 2,
          },
          {
            "width": 96,
          },
        ]
      }
    >
      <View
        style={
          {
            "backgroundColor": "#ec4899",
            "borderRadius": 9999,
            "flexDirection": "row",
            "height": 8,
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#3b82f6",
                "height": "100%",
              },
              {
                "width": "50%",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityHint="Odaya katılmak için tıklayın"
      accessibilityLabel="Test Room odasına katıl"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#f1f5f9",
          "borderRadius": 9999,
          "paddingHorizontal": 24,
          "paddingVertical": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1c1c0d",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        Katıl
      </Text>
    </View>
  </View>
</View>
`;

exports[`RoomCard renders correctly with empty participants 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderColor": "#f1f5f9",
      "borderRadius": 32,
      "borderWidth": 1,
      "marginBottom": 12,
      "padding": 24,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1c1c0d",
            "fontSize": 18,
            "fontWeight": "600",
            "marginBottom": 2,
          }
        }
      >
        Empty Room
      </Text>
      <Text
        style={
          {
            "color": "#9293c9",
            "fontSize": 14,
            "marginTop": 2,
          }
        }
      >
        Test
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(100, 103, 242, 0.1)",
          "borderRadius": 9999,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Material Symbols Outlined",
              "fontSize": 20,
            },
            {
              "color": "#6467f2",
              "fontSize": 18,
            },
          ]
        }
      >
        timer
      </Text>
      <Text
        style={
          {
            "color": "#6467f2",
            "fontSize": 14,
            "fontVariant": "tabular-nums",
            "fontWeight": "bold",
          }
        }
      >
        05:00
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 4,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "borderTopColor": "#f1f5f9",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingTop": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Material Symbols Outlined",
              "fontSize": 20,
            },
            {
              "color": "#9e9d47",
              "fontSize": 20,
            },
          ]
        }
      >
        group
      </Text>
      <Text
        style={
          {
            "color": "#9e9d47",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        0
        /
        8
      </Text>
    </View>
    <View
      style={
        [
          {
            "gap": 2,
          },
          {
            "width": 96,
          },
        ]
      }
    >
      <View
        style={
          {
            "backgroundColor": "#ec4899",
            "borderRadius": 9999,
            "flexDirection": "row",
            "height": 8,
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#3b82f6",
                "height": "100%",
              },
              {
                "width": "0%",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityHint="Odaya katılmak için tıklayın"
      accessibilityLabel="Empty Room odasına katıl"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#f1f5f9",
          "borderRadius": 9999,
          "paddingHorizontal": 24,
          "paddingVertical": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#1c1c0d",
            "fontSize": 14,
            "fontWeight": "600",
          }
        }
      >
        Katıl
      </Text>
    </View>
  </View>
</View>
`;
